Changelog
=========

1.0a2 - Unreleased
------------------

* Fix `getObjectPosition` to return a value representing "no position" for
  non-orderable content instead of raising an error.
  [witsch]

* Fix boolean value of the btree-based folder base class.
  [witsch]

* Factor CMF out of the base classes for the new btree-based folder class
  and simplify things a bit afterwards.
  [witsch]

* Add adapter providing explicit ordering only for "orderable" content.
  [witsch]

* Clean up tests and their setup.
  [witsch]


1.0a1 - Released May 27, 2008
----------------------------------

* Initial release
  [optilude, tesdal, witsch]
